--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "express": "4.13.3",
+    "nodejs-nodemailer-outlook": "^1.1.0",
     "nodemailer": "^6.3.0"
   },
   "author": "David McDowell",
