--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "project4",
-  "verson": "1.0.0",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "4.13.3",
-    "nodejs-nodemailer-outlook": "^1.1.0",
-    "nodemailer": "^6.3.0"
-  },
-  "author": "David McDowell",
-  "license": "ISC"
+    "name" : "HerokuCode",
+    "verson" : "1.0.0",
+    "decription":"CS350 project",
+    "author" : "David McDowell",
+    "license" : "ISC",
+
+    "scripts" : {
+        "start" : "node server.js"
+    },
+
+    "dependencies": {
+        "express" : "4.13.3",
+        "nodemailer" : "^4.0.1",
+        "body-parser" : "^1.19.0",
+        "nodejs-nodemailer-outlook": "^1.1.0"
+
+    },
+    "devDependencies": {
+        "nodeman": "^1.1.2"
+      }
 }
