--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-    "name" : "HerokuCode",
-    "verson" : "1.0.0",
-    "decription":"CS350 project",
-    "author" : "David McDowell",
-    "license" : "ISC",
-
-    "scripts" : {
-        "start" : "node server.js"
-    },
-
-    "dependencies": {
-        "express" : "4.13.3",
-        "nodemailer" : "^4.0.1",
-        "body-parser" : "^1.19.0",
-        "nodejs-nodemailer-outlook": "^1.1.0"
-
-    },
-    "devDependencies": {
-        "nodeman": "^1.1.2"
-      }
+  "name": "HerokuCode",
+  "verson": "1.0.0",
+  "decription": "CS350 project",
+  "author": "David McDowell",
+  "license": "ISC",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "4.13.3",
+    "mongodb": "^3.3.0-beta2",
+    "nodejs-nodemailer-outlook": "^1.1.0",
+    "nodemailer": "^4.0.1"
+  },
+  "devDependencies": {
+    "nodeman": "^1.1.2"
+  }
 }
